--- a/src/app/modules/location/state-list/state-list.component.html
+++ b/src/app/modules/location/state-list/state-list.component.html
@@ -41,7 +41,7 @@
           <span class="font-mono bg-gray-100 px-2 py-1 rounded">{{ state.code }}</span>
         </td>
         <td>
-          <span class="font-medium">{{ getCountryName(state.countryId) }}</span>
+          <span class="font-medium">{{ state.countryId.name | multiLanguage }}</span>
         </td>
         <td>
           <span class="font-semibold text-green-600">${{ state.shippingCost }}</span>
